--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=gestionTareas
+
+spring.datasource.url=jdbc:mysql://localhost:3306/gestion_tareas
+spring.datasource.username=admin
+spring.datasource.password=secret
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
